--- a/templates/about.html
+++ b/templates/about.html
@@ -1,22 +1,27 @@
 <ion-view view-title="About">
-  <ion-content>
-  <br>
-    <h1 align="center">Welcome to Nova Scotia Wildlife!</h1>
+	<ion-content>
+		<br>
 
+		<h1 align="center">Welcome to Nova Scotia Wildlife!</h1>
 
-	<div class="card">
-	  <div align="justify" class="item item-text-wrap">
-	    Description  
-	  </div>
+		<div class="card">
+			<div align="justify" class="item item-text-wrap">
+				Nova Scotia Wildlife is a free app that provides general information on several species of mammals, birds, reptiles and amphibians found throughout Nova Scotia. The app does not require an internet connection which allows it to be used in the wilderness. 
+			</div>
+		</div>
 
-	</div>
+		<div class="card">
+			<div align="justify" class="item item-text-wrap">
+			Please use caution when exploring the wilderness and when approaching wild animals. Always let someone know where you are planning to be and for how long. 
+			</div>
+		</div>
 
-	<div class="card">
-	  <div align="justify" class="item item-text-wrap">
-	    Created by Andrew Sealy | 2016
-	  </div>
+		<div class="card">
+			<div align="justify" class="item item-text-wrap">
+				Created by Andrew Sealy | 2016
+			</div>
 
-	</div>
+		</div>
 
-  </ion-content>
+	</ion-content>
 </ion-view>
