--- a/templates/birds.html
+++ b/templates/birds.html
@@ -1,5 +1,426 @@
 <ion-view view-title="Birds">
 	<ion-content>
-	
-</ion-content>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>COMMON LOON (Gavia immer)</p>
+				<img class="full-image" src="img/35.jpg">
+				<p>
+					Size - 71-89 cm<br>
+					Young - 2, June - July<br>
+					Diet - fish<br>
+					Life Span - 7.5 years<br>
+					Activity Pattern - diurnal, year-round
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>DOUBLE-CRESTED CORMORANT (Phalacrocorax auritus)</p>
+				<img class="full-image" src="img/36.jpg">
+				<p>
+					Size - 60-75 cm<br>
+					Young - 3-4, May-June<br>
+					Diet - fish<br>
+					Life Span - 17-23 years<br>
+					Activity Pattern - diurnal, migrate for winter
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>GREAT BLUE HERON (Ardea herodias)</p>
+				<img class="full-image" src="img/37.jpg">
+				<p>
+					Size - 110-130 cm<br>
+					Young - 3-5, May-June<br>
+					Diet - fish, amphibians<br>
+					Life Span - 11 years<br>
+					Activity Pattern - diurnal, migrate for winter
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>CANADA GOOSE (Branta canadensis)</p>
+				<img class="full-image" src="img/38.jpg">
+				<p>
+					Size - 85-110 cm<br>
+					Young - 4-6, May-June<br>
+					Diet - plants<br>
+					Life Span - 18-23 years<br>
+					Activity Pattern - diurnal, migrate for winter
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>AMERICAN BLACK DUCK (Anas rubripes)</p>
+				<img class="full-image" src="img/39.jpg">
+				<p>
+					Size - 50-63 cm<br>
+					Young - 6-12, May-June<br>
+					Diet - plants, insects<br>
+					Life Span - 14-20 years<br>
+					Activity Pattern - diurnal, some migrate for winter
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>COMMON EIDER (Somateria mollissima)</p>
+				<img class="full-image" src="img/40.jpg">
+				<p>
+					Size - 53-71 cm<br>
+					Young - 4-6, May-June<br>
+					Diet - shellfish<br>
+					Life Span - 12 years<br>
+					Activity Pattern - diurnal, year round
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>HARLEQUIN DUCK (Histrionicus histrionicus)</p>
+				<img class="full-image" src="img/41.jpg">
+				<p>
+					Size - 35-48 cm<br>
+					Young - 5-6, May-June<br>
+					Diet - insects, crustaceans<br>
+					Life Span - unknown, likely 5-10 years<br>
+					Activity Pattern - diurnal, migrate here for winter
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>COMMON MERGANSER (Mergus merganser)</p>
+				<img class="full-image" src="img/42.jpg">
+				<p>
+					Size - 53-68 cm<br>
+					Young - 8-12, May-July<br>
+					Diet - fish<br>
+					Life Span - unknown<br>
+					Activity Pattern - diurnal, year round
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>OSPREY (Pandion haliaetus)</p>
+				<img class="full-image" src="img/43.jpg">
+				<p>
+					Size - 53-62 cm<br>
+					Young - 2-4, May-June<br>
+					Diet - fish<br>
+					Life Span - 18-21 years<br>
+					Activity Pattern - diurnal, migrate for winter
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>BALD EAGLE (Haliaeetus leucocephalus)</p>
+				<img class="full-image" src="img/44.jpg">
+				<p>
+					Size - 76-94 cm<br>
+					Young - 1-3, May<br>
+					Diet - fish, carrion<br>
+					Life Span - 15-20 years<br>
+					Activity Pattern - diurnal, year round
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>RED-TAILED HAWK(Buteo jamaicensis)</p>
+				<img class="full-image" src="img/45.jpg">
+				<p>
+					Size - 48-61 cm<br>
+					Young - 2-4, April-May<br>
+					Diet - rodents<br>
+					Life Span - 14-17 years<br>
+					Activity Pattern - diurnal, year round
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>PEREGRINE FALCON (Falco peregrinus)</p>
+				<img class="full-image" src="img/46.jpg">
+				<p>
+					Size - 38-54 cm<br>
+					Young - 3-5, May-June<br>
+					Diet - birds<br>
+					Life Span - 15-20 years<br>
+					Activity Pattern - diurnal, migrate for winter
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>RING-NECKED PHEASANT (Phasianus colchicus)</p>
+				<img class="full-image" src="img/47.jpg">
+				<p>
+					Size - 50-90 cm<br>
+					Young - 8-15, May -June<br>
+					Diet - plants, insects<br>
+					Life Span - 8 years<br>
+					Activity Pattern - diurnal, year-round
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>RUFFED GROUSE (Bonasa umbellus)</p>
+				<img class="full-image" src="img/48.jpg">
+				<p>
+					Size - 40-48 cm<br>
+					Young - 9-12, May - June<br>
+					Diet - plants<br>
+					Life Span - 8-11 years<br>
+					Activity Pattern - diurnal, year-round
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>PIPING PLOVER (Charadrius melodus)</p>
+				<img class="full-image" src="img/49.jpg">
+				<p>
+					Size - 15-19 cm<br>
+					Young - 4, June<br>
+					Diet - marine worms, insects<br>
+					Life Span - 8-11 years<br>
+					Activity Pattern - diurnal, migrate for winter
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>AMERICAN WOODCOCK (Scolopax minor)</p>
+				<img class="full-image" src="img/50.jpg">
+				<p>
+					Size - 25-30 cm cm<br>
+					Young - 4, May<br>
+					Diet - earthworms<br>
+					Life Span - 5-8.5 years<br>
+					Activity Pattern - diurnal, migrate for winter
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>HERRING GULL (Larus argentatus)</p>
+				<img class="full-image" src="img/51.jpg">
+				<p>
+					Size - 58-66 cm<br>
+					Young - 3, May - June<br>
+					Diet - omnivore<br>
+					Life Span - 15-18 years<br>
+					Activity Pattern - diurnal, year-round
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>ROSEATE TERN (Sterna dougallii)</p>
+				<img class="full-image" src="img/52.jpg">
+				<p>
+					Size - 35-40 cm<br>
+					Young - 2-3, June<br>
+					Diet - fish<br>
+					Life Span - 7-9 years<br>
+					Activity Pattern - diurnal, migrate for winter
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>ATLANTIC PUFFIN (Fratercula arctica)</p>
+				<img class="full-image" src="img/53.jpg">
+				<p>
+					Size - 29-35 cm<br>
+					Young - 1, July<br>
+					Diet - fish<br>
+					Life Span - 21 years<br>
+					Activity Pattern - diurnal, migrate for winter
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>BARRED OWL (Strix varia)</p>
+				<img class="full-image" src="img/54.jpg">
+				<p>
+					Size - 43-60 cm<br>
+					Young - 2-3, April<br>
+					Diet - voles, shrews<br>
+					Life Span - 9 years<br>
+					Activity Pattern - nocturnal, year-round
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>RUBY-THROATED HUMMINGBIRD (Archilochus colubris)</p>
+				<img class="full-image" src="img/55.jpg">
+				<p>
+					Size - 8-9 cm<br>
+					Young - 2, June - July<br>
+					Diet - flower nectar<br>
+					Life Span - 5 years<br>
+					Activity Pattern - diurnal, migrate for winter
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>HAIRY WOODPECKER (Picoides villosus)</p>
+				<img class="full-image" src="img/56.jpg">
+				<p>
+					Size - 22-26 cm<br>
+					Young - 3-5, May - June<br>
+					Diet - insects<br>
+					Life Span - 7-13 years<br>
+					Activity Pattern - diurnal, year-round
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>TREE SWALLOW (Tachycineta bicolor)</p>
+				<img class="full-image" src="img/57.jpg">
+				<p>
+					Size - 12-15 cm<br>
+					Young - 4-6, May - June<br>
+					Diet - insects<br>
+					Life Span - 5-9 years<br>
+					Activity Pattern - diurnal, migrate for winter
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>BLUE JAY (Cyanocitta cristata)</p>
+				<img class="full-image" src="img/58.jpg">
+				<p>
+					Size - 28-31 cm<br>
+					Young - 4-6, May - June<br>
+					Diet - omnivore<br>
+					Life Span - 5-15 years<br>
+					Activity Pattern - diurnal, year-round
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>COMMON RAVEN (Corvus corax)</p>
+				<img class="full-image" src="img/59.jpg">
+				<p>
+					Size - 56-67 cm<br>
+					Young - 3-5, March - April<br>
+					Diet - omnivore<br>
+					Life Span - 24.5 years (captive)<br>
+					Activity Pattern - diurnal, year-round
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>BLACK-CAPPED CHICKADEE (Parus atricapillus)</p>
+				<img class="full-image" src="img/60.jpg">
+				<p>
+					Size - 12-14 cm<br>
+					Young - 6-8, May - July<br>
+					Diet - insects<br>
+					Life Span - 5-12.5 years<br>
+					Activity Pattern - diurnal, year-round
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>AMERICAN ROBIN (Turdis migratorius)</p>
+				<img class="full-image" src="img/61.jpg">
+				<p>
+					Size - 23-28 cm<br>
+					Young - 4, May - September<br>
+					Diet - earthworms<br>
+					Life Span - 4-11.5 years<br>
+					Activity Pattern - diurnal, migrate in winter
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>EUROPEAN STARLING (Sturnus vulgaris)</p>
+				<img class="full-image" src="img/62.jpg">
+				<p>
+					Size - 19-21.5 cm<br>
+					Young - 4-6, May - July<br>
+					Diet - omnivore<br>
+					Life Span - 5-16 years<br>
+					Activity Pattern - diurnal, year-round
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>YELLOW WARBLER (Dendroica petechia)</p>
+				<img class="full-image" src="img/63.jpg">
+				<p>
+					Size - 11-13 cm<br>
+					Young - 4-5, June - July<br>
+					Diet - insects, seeds<br>
+					Life Span - 5-7 years<br>
+					Activity Pattern - diurnal, migrate in winter
+				</p>
+			</div>
+		</div>
+
+		<div class="list card">
+			<div class="item item-body">
+				<p>SONG SPARROW (Melospiza melodia)</p>
+				<img class="full-image" src="img/64.jpg">
+				<p>
+					Size - 14-18 cm<br>
+					Young - 3-5, May - August<br>
+					Diet - insects, seeds<br>
+					Life Span - 2.5-10 years<br>
+					Activity Pattern - diurnal, migrate in winter
+				</p>
+			</div>
+		</div>
+
+
+	</ion-content>
 </ion-view>
